# nest

./: .clang-format  .clangd  .gitignore  AGENTS.md  CMakeLists.txt  README.md  algo.h  bbox.h  bindings.h  bindings.pxd  bindings.pyx  build_graph.py  diff2.h  elem_graph.cc  elem_graph.h  elem_graph.pxd  elem_graph.pyx  kdtree.h  mat.h  mat_triangle.h  matcher.h  max_flow.cc  max_flow.h  nesting.h  plot.py  poly.h  pt_cloud.py  pyproject.toml  pyrightconfig.json  setup.py  test.cc  test.py  test_guide_bug.cc  test_guide_bug.py  test_matcher.cc  utils.h  vec.h
docs/: build_graph_tuning.md  build_graph_tuning_results.txt  debugging_guide.md  density_benchmark_baseline.txt  dfs_benchmark.md  dfs_benchmark_results.txt  first_pass_tuning.md  first_pass_tuning_results.txt  guidance_benchmark_results.txt  guidance_cast_tuning.md  guidance_engine_gap_report.md  guidance_flow_benchmark.json  guidance_flow_benchmark.txt  guidance_tracer_bench.txt  local_placement_benchmark.json  local_placement_benchmark.md  local_placement_benchmark.txt  nest_config.md  nest_pipeline_benchmark.md  nest_pipeline_benchmark_results.txt  place_propose_benchmark.md  propose_ablation_results.txt  propose_benchmark.md  propose_benchmark_results.txt  propose_border_benchmark.md  propose_border_benchmark_results.txt  propose_tuning_summary.md  rules_benchmark_results.txt
docs/guidance_viz/: summary.md
nest_graph/: algo.h  bbox.h  board.py  build_graph.py  config.py  elem_graph.cc  elem_graph.h  elem_graph.pxd  elem_graph.pyx  elem_graph_ccexport.pxd  geom_obj.h  placement_clearance.py  placement_scene.py  poly.h  propose.py  proposer_names.py  rules.h  track_perf.py  utils.py  vec.h
nest_graph/common/: bbox.h  circle.h  vec.h
nest_graph/elem_graph/: CMakeLists.txt  __init__.py  elem_graph.cc  elem_graph.h  elem_graph_module.cc  rules.cc  rules.h  types.h
nest_graph/elem_graph/bindings/: api.cc  bindings.h  module.cc  types.cc
nest_graph/elem_graph/graph/: graph.h  graph_index.cc  graph_index.h
nest_graph/elem_graph/internal/: internal.cc  internal.h
nest_graph/elem_graph/refine/: finalize.cc  finalize.h  refine_dfs.cc
nest_graph/elem_graph/rules/: rules.cc  rules.h  rules_util.h
nest_graph/elem_graph/scoring/: scoring.cc  scoring.h
nest_graph/elem_graph/selection/: evaluate_rules.cc  selection.cc  selection.h
nest_graph/elem_graph/tests/: elem_graph_test_helpers.h  test_refine_dfs.cc  test_selection.cc
nest_graph/elem_graph/types/: types.h
nest_graph/geometry/: CMakeLists.txt  __init__.py  containment.h  decompose.h  geometry.cc  geometry_common.h  guide.h  point_in_solid.h  polygon_distance.h  polygon_intersect.h  solid_geometry.h  sweep.h  sweep_engine.h
nest_graph/geometry/bindings/: api.cc  bind_batch.cc  bind_cast.cc  bind_distance.cc  bind_geometry.cc  bind_guidance.cc  bind_internal.h  bind_intersect.cc  bind_module.cc  bindings.h  geometry_bindings_extra.h  geometry_factory.h  module.cc  python_converters.cc  python_converters.h  shapely.cc  shapely.h  types.cc  types.h
nest_graph/geometry/common/: geometry_common.h  tracer.h
nest_graph/geometry/convex/: cast.h  distance.h  lookup.h  penetration.h
nest_graph/geometry/distance/: polygon_distance.h  static_collision_scene.h
nest_graph/geometry/guide/: guide.h  polygon_cast.h
nest_graph/geometry/intersect/: polygon_intersect.h
nest_graph/geometry/solid/: containment.h  decompose.h  point_in_solid.h  solid_geometry.h
nest_graph/geometry/sweep/: sweep.h  sweep_engine.h
nest_graph/geometry/tests/: geometry_test_helpers.h  test_circle.cc  test_convex_gjk.cc  test_decompose.cc  test_distance.cc  test_geometry_api.cc  test_guide.cc  test_highly_curved_linestrings.cc  test_holes.cc  test_intersect.cc  test_point_in_solid_bug.cc  test_transform.cc
nest_graph/poly/: CMakeLists.txt  circle.h  common_checks.h  convex_contain.h  convex_distance.h  convex_intersect.h  decompose.h  decompose_simple.h  geometry.cc  gjk.h  point_in_solid.h  poly.h  poly_common.h  poly_containment.h  poly_distance.h  poly_intersect.h  poly_module.cc  poly_sweep_engine.h  sweep.h  tracer.h
nest_graph/poly/convex/: contain.h  distance.h  intersect.h  lookup.h  penetration.h
nest_graph/poly/tests/: poly_test_helpers.h  test_circle.cc  test_convex_gjk.cc  test_decompose.cc  test_highly_curved_linestrings.cc  test_holes.cc  test_point_in_solid_bug.cc  test_poly_distance.cc  test_poly_intersect.cc
nest_graph/propose/: __init__.py  context.py  feedback.py  geometry.py  pipeline.py  placement_axis.py  placement_common.py  placement_outline.py  placement_perimeter.py  placements_batch.py  placements_edge.py  placements_geo.py  placements_guidance.py  ranking.py  (+4 more)
scripts/: __init__.py  benchmark_build_graph_tune.py  benchmark_dfs.py  benchmark_first_pass.py  benchmark_guidance_flow.py  benchmark_guidance_tracer.py  benchmark_local_placement.py  benchmark_nest_pipeline.py  benchmark_place_propose.py  benchmark_propose.py  benchmark_propose_ablation.py  benchmark_propose_border.py  benchmark_propose_common.py  benchmark_rules.py  diagnose_border_refine.py  generate_test_refs.py  guidance_placement_fixtures.py  repro_segfault_graph4.py  visualize_guidance_placement.py
tests/: conftest.py  nest_invariants.py  repro_segfault_graph4.py  test_board_sheet.py  test_build_graph.py  test_c_shape.py  test_complex_compare.py  test_concave.py  test_edge_cases.py  test_elem_graph_append.py  test_elem_graph_optimality.py  test_elem_graph_segfault.py  test_elem_graph_selection.py  test_geometry.py  test_geometry_api.py  test_geometry_area.py  test_geometry_guide.py  test_geometry_intersect_regression.py  test_guidance_propositions.py  test_guidance_scenarios.py  test_guide_bindings.py  test_local_compact_propose.py  test_propose_batch_pack.py  test_propose_benchmark_smoke.py  test_propose_board_edge.py  test_propose_cast_seeds.py  test_propose_gap.py  test_propose_guidance.py  test_propose_integration.py  test_propose_perimeter.py  test_propose_place_classifier.py  test_repulsor_rules.py  test_rule_guided_propose.py  test_rule_mutation.py  test_transform_shuffle.py
