# Local dev (uv): uv venv && uv sync
# Build/install extensions: uv pip install -e . --no-build-isolation
# Tests: pytest tests/  (requires editable install so nest_graph.geometry._geometry is on the path)
# Requires Python dev headers for the nanobind extensions (e.g. python3.12-dev).

[project]
name = "nest_graph"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "opencv-python",
    "pydantic",
    "shapely",
    "rtree",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["scikit-build-core>=0.9.0", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.scikit-build]
minimum-version = "0.9"
build-dir = "build/{wheel_tag}"
wheel.packages = ["nest_graph"]

# Keep local venvs and CMake out of sdists (uv/pip unpack disallows .venv symlinks).
[tool.scikit-build.sdist]
exclude = [".venv", "venv", "build", "dist", "*.egg-info"]

[tool.scikit-build.cmake]
version = "CMakeLists.txt"
