# Local dev (uv): uv venv && uv sync
# Build/install extensions: uv pip install -e . --no-build-isolation
# Tests: uv sync --extra test --no-install-project
#   cmake --build build --target _geometry _elem_graph
#   cp build/nest_graph/geometry/_geometry*.so nest_graph/geometry/
#   cp build/nest_graph/elem_graph/_elem_graph*.so nest_graph/elem_graph/
#   uv run --no-sync pytest tests/
# (python3-dev required to rebuild nanobind extensions)
# Requires Python dev headers for the nanobind extensions (e.g. python3.12-dev).

[project]
name = "nest_graph"
version = "0.0.1"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "matplotlib",
    "opencv-python",
    "pydantic",
    "shapely",
    "tqdm",
]

[project.optional-dependencies]
test = [
    "pytest",
]

[build-system]
requires = ["scikit-build-core>=0.9.0", "nanobind>=2.0"]
build-backend = "scikit_build_core.build"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.scikit-build]
minimum-version = "0.9"
build-dir = "build/{wheel_tag}"
wheel.packages = ["nest_graph"]

# Keep local venvs and CMake out of sdists (uv/pip unpack disallows .venv symlinks).
[tool.scikit-build.sdist]
exclude = [".venv", "venv", "build", "dist", "*.egg-info"]

[tool.scikit-build.cmake]
version = "CMakeLists.txt"
